<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2010, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>

    <!-- The name of the application. -->
    <string name="app_name">Winslow Tamil Dictionary</string>

    <!-- The label for use as a searchable item -->
    <string name="search_label">Dictionary</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search Winslow Tamil</string>

    <!-- The menu entry that invokes search. -->
    <string name="menu_search">Search</string>
    <string name="status">Connectivity status</string>
    <string name="online_search">Search offline</string>
    <string name="latin_display">Transliterated display</string>
    <string name="info">About this app (1.0b)</string>
    
    <!-- radio buttons for search type -->
    <string name="radio_headword">Search headwords only</string>
    <string name="radio_fulltext">Search all text</string>
    <string name="btn_display">Display</string>

    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>

    <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">Definitions of words</string>

    <!-- General instructions in the main activity. -->
    <string name="search_instructions">Use the search box in the Action Bar to look up a word</string>

    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
      <item quantity="one">%1$d result for \"%2$s\": </item>
      <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->
    <string name="no_results">No results found for \"%s\"</string>

</resources>
