<!--
/*
** Copyright 2010, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<!-- Options Menu for SearchableActivity and WordActivity.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:winslow_sqlite="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
          android:title="@string/menu_search"
          winslow_sqlite:showAsAction="always"
          winslow_sqlite:actionViewClass="android.support.v7.widget.SearchView"
          />
    <item android:id="@+id/connection_status"
          android:title="@string/status"
          winslow_sqlite:showAsAction="always"
          android:icon="@drawable/ic_action_web_site"/>
    <item android:id="@+id/online_search"
          android:title="@string/online_search"
          winslow_sqlite:showAsAction="never"
          android:checkable="true"/>
    <item android:id="@+id/latin_display"
          android:title="@string/latin_display"
          winslow_sqlite:showAsAction="never"
          android:checkable="true"/>
    <item android:id="@+id/info"
	      android:title="@string/info"
          winslow_sqlite:showAsAction="never"
	       />
</menu>
