<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2010, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<!-- Layout for SearchableActivity.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <TextView
            android:id="@+id/search_instructions"
            android:textColor="?android:textColorPrimary"
            android:textSize="17sp"
            android:text="@string/search_instructions"
            android:background="@android:drawable/title_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_instructions"
        android:layout_above="@+id/search_type"
        />

    <RadioGroup 
        	android:id="@+id/search_type"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
        
        	<RadioButton
        	    android:id="@+id/radio_headword"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/radio_headword"
        	    android:onClick="headword_search"
        	    android:checked="true" />
        	
        	<RadioButton 
        	    android:id="@+id/radio_fulltext"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/radio_fulltext"
        	    android:onClick="fulltext_search" />	
    </RadioGroup>
    
</RelativeLayout>


